[gd_scene load_steps=2 format=3 uid="uid://dufx3f4a5hxdx"]

[ext_resource type="Script" path="res://scripts/entities/damage_area.gd" id="1_0vmsi"]

[node name="DamageArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_0vmsi")
