[gd_scene load_steps=3 format=3 uid="uid://ckc1wkco6h7ws"]

[ext_resource type="Script" path="res://scripts/entities/damage_area.gd" id="1_fy1ki"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_j24aw"]

[node name="Killzone" type="Area2D"]
script = ExtResource("1_fy1ki")
is_killzone = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_j24aw")

[node name="KillzoneTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.6
one_shot = true

[connection signal="timeout" from="KillzoneTimer" to="." method="_on_killzone_timer_timeout"]
